# text-to-cad-telegram-bot

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
